--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -133,9 +134,17 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+
+
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jstl-impl</artifactId>
             <version>1.2</version>
         </dependency>
 
